# Frappe-for-playstation

./: README.md  pyproject.toml
playstation_digital_system/: hooks.py  modules.txt
playstation_digital_system/apis/: mpesa.py  mpesa_payments.py  pdf.py  reports_api.py  utils.py
playstation_digital_system/frappe_playstation_digital_system/custom/: caffe.json
playstation_digital_system/frappe_playstation_digital_system/doctype/caffe/: caffe.js  caffe.json  caffe.py  test_caffe.py
playstation_digital_system/frappe_playstation_digital_system/doctype/caffe_settings/: caffe_settings.js  caffe_settings.json  caffe_settings.py  test_caffe_settings.py
playstation_digital_system/frappe_playstation_digital_system/doctype/game_session/: game_session.js  game_session.json  game_session.py  test_game_session.py
playstation_digital_system/frappe_playstation_digital_system/doctype/game_space/: game_space.js  game_space.json  game_space.py  test_game_space.py
playstation_digital_system/frappe_playstation_digital_system/doctype/games/: games.js  games.json  games.py  test_games.py
playstation_digital_system/frappe_playstation_digital_system/doctype/mpesa_transactions/: mpesa_transactions.js  mpesa_transactions.json  mpesa_transactions.py  test_mpesa_transactions.py
playstation_digital_system/frappe_playstation_digital_system/report/caffe_growth_analysis/: caffe_growth_analysis.js  caffe_growth_analysis.json  caffe_growth_analysis.py
playstation_digital_system/frappe_playstation_digital_system/workspace/frappe_for_ps/: frappe_for_ps.json
